# clinicalops-env

./: .dockerignore  .gitignore  README.md  __init__.py  client.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  scenarios.py
server/: Dockerfile  __init__.py  app.py  clinicalops_environment.py  requirements.txt
